trunk/tests/kiama/negative/type_errors/L4/10_badrecord4.ob
MODULE badrecord4;

TYPE
    arecord2 = RECORD f : BOOLEAN; x : INTEGER END;

VAR
    rec1 : arecord2;
    
BEGIN
    rec1.h := 1
END badrecord4.
